--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "axios": "^1.12.2",
-    "expo": "~54.0.9",
-    "expo-av": "^16.0.7",
-    "expo-screen-orientation": "^9.0.7",
+    "expo": "^54.0.9",
+    "expo-screen-orientation": "~9.0.7",
     "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-video": "~3.0.11",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-safe-area-context": "~5.6.0",
