--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/native-stack": "^7.3.26",
     "axios": "^1.12.2",
     "expo": "^54.0.9",
+    "expo-clipboard": "^8.0.7",
+    "expo-navigation-bar": "^5.0.8",
     "expo-screen-orientation": "~9.0.7",
     "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
